--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,11 +1,9 @@
 .navbar{
     display: flex;
-    background-color: white;
     justify-content: center;
     position: fixed;
     width: 100%;
     z-index: 9999;
-    box-shadow: 0px 0px 7px 1px #0000000f;
 }
 
 .navbarLinks{
@@ -15,10 +13,15 @@
     font-size: 18px;
     font-weight: bolder;
     text-transform: uppercase;
-    letter-spacing:1.5px;
+    letter-spacing: 1.5px;
     font-family: "DIN Condensed";
     color: var(--charcoal);
     background: white;
+    box-shadow: 0px 9px 7px -5px #0000000f;
+    border-radius: 2px;
+    border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
+    border-bottom: 3px solid #000000ab;
 }
 
 
@@ -66,5 +69,6 @@
     .navbarLinks{
         width: 100%;
     }
+    
 
 }
