--- a/src/styles/Community.module.css
+++ b/src/styles/Community.module.css
@@ -1,7 +1,7 @@
 .titleContainer{
-    /* width: 50%; 
-    display: flex;
-    justify-content: flex-end; */
+    transform: translateY(10%);
+    position: sticky;
+    top: 10%;
 }   
 
 
@@ -47,7 +47,6 @@
 }
 
 .reviewsContainer{
-    background-color: white;
     max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
@@ -68,6 +67,9 @@
 
   .titleContainer{
     display: block;
+    position: relative;
   }
+
+  
 
 }
