--- a/src/styles/Menu.module.css
+++ b/src/styles/Menu.module.css
@@ -1,8 +1,15 @@
+.menu{
+    background-color: white;
+}
+
 .titleContainer{
- display: flex;
- flex-direction: column;
- align-items: center;
- background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    margin-bottom: 40px;
+    z-index: 99;
+    position: relative;
 }   
 
 
@@ -39,15 +46,19 @@
 
 /* Menu */
 .menuContainer{
-    display: flex;
-    height: 120vh;
+    display: grid;
+    height: 100vh;
+    position: relative;
+    z-index: 1;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
 .menuSection{
     position: relative;
     z-index: -1;
     flex: 1;
-    border-right: 1px solid #CECECE;
+    border-right: 1px solid #00000024;
+    background-color: white;
 }
 
 .menuSectionTitle{
@@ -79,13 +90,20 @@
 }
 
 .menu{
-    height: 120vh;
-    overflow: hidden;
+    /* height: 100vh; */
+    overflow: hidden;   
+    z-index: 12;
+position: relative;
 }
 
 
 @media (max-width: 810px) {
- 
+    .menuContainer{
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: unset; 
+        height: 130vh;
+    }
+    
     .menuSectionTitle{
         font-size: 25px;
         padding: 0px 10px;
@@ -95,5 +113,8 @@
         padding: 0px 8px;
         margin-bottom: 20px;
     }
-    
+    .background{
+        background: white;
+    }
+
 }
